--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Archi - AI Guardian</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Archi — Guardian AI</title>
 </head>
-<body style="font-family: sans-serif; background: #0e0e0e; color: #fff; text-align: center; padding: 10vh;">
-  <h1>🛡️ Archi</h1>
-  <h2>Touch nothing. Archi sees.</h2>
-  <p>Guardian-class AI for real-world safety.<br>
-  Crisis detection, silent alerts, privacy-first.</p>
-  <p style="margin-top: 3em;">Website in development.<br>Join the waitlist soon.</p>
+<body style="font-family:sans-serif; text-align:center; padding:5em;">
+    <h1>🛡️ Archi is Online</h1>
+    <p>Privacy-first AI Guardian</p>
+    <p>Coming soon at <strong>usearchi.com</strong></p>
 </body>
 </html>
