--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
+<!-- usearchi.com index.html (Updated with Embedded Waitlist) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Archi — Guardian AI</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Archi — Silent AI Guardian</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #0e0e0e;
+      color: #ffffff;
+      text-align: center;
+      padding: 4vh 2vw;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      font-weight: normal;
+      font-size: 1.5rem;
+      margin-bottom: 2em;
+      color: #888;
+    }
+    iframe {
+      width: 100%;
+      max-width: 600px;
+      height: 600px;
+      border: none;
+      background: #fff;
+      border-radius: 12px;
+    }
+    footer {
+      margin-top: 3em;
+      font-size: 0.9rem;
+      color: #666;
+    }
+    a {
+      color: #42a5f5;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-<body style="font-family:sans-serif; text-align:center; padding:5em;">
-    <h1>🛡️ Archi is Online</h1>
-    <p>Privacy-first AI Guardian</p>
-    <p>Coming soon at <strong>usearchi.com</strong></p>
+<body>
+  <h1>🛡️ Archi</h1>
+  <h2>Touch nothing. Archi sees.</h2>
+
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1tX1sIuhhjtFuBueVobE9TBGOWE45plhHyjXRVEI-ijhvmA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+  <footer>
+    <p>&copy; 2025 Archi AI. All rights reserved.</p>
+    <p>
+      <a href="/privacy.html">Privacy Policy</a> •
+      <a href="/terms.html">Terms of Service</a>
+    </p>
+  </footer>
 </body>
 </html>
