--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- usearchi.com index.html (Updated with Embedded Waitlist) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,36 +11,54 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #0e0e0e;
       color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
       text-align: center;
-      padding: 4vh 2vw;
+      padding: 2rem;
     }
+
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5em;
+      font-size: 2.8rem;
+      margin-bottom: 0.3em;
     }
+
     h2 {
       font-weight: normal;
-      font-size: 1.5rem;
-      margin-bottom: 2em;
-      color: #888;
+      font-size: 1.4rem;
+      color: #aaa;
+      margin-bottom: 2rem;
     }
-    iframe {
-      width: 100%;
-      max-width: 600px;
-      height: 600px;
+
+    .waitlist-button {
+      background: #1e88e5;
+      color: white;
       border: none;
-      background: #fff;
-      border-radius: 12px;
+      padding: 1rem 2rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      text-decoration: none;
     }
+
+    .waitlist-button:hover {
+      background: #1565c0;
+    }
+
     footer {
       margin-top: 3em;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: #666;
     }
+
     a {
       color: #42a5f5;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
@@ -51,7 +68,16 @@
   <h1>🛡️ Archi</h1>
   <h2>Touch nothing. Archi sees.</h2>
 
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfnD9_0mk6th-3YBGsFJ0be2ujSoNdvF6d5XIxR6awbEq9O1A/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <p>Website in development.<br>Join the waitlist below.</p>
+
+  <a
+    href="https://docs.google.com/forms/d/e/1FAIpQLSd1tX1sIuhhjtFuBueVobE9TBGOWE45plhHyjXRVEI-ijhvmA/viewform"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="waitlist-button"
+  >
+    Join the Waitlist →
+  </a>
 
   <footer>
     <p>&copy; 2025 Archi AI. All rights reserved.</p>
@@ -62,4 +88,3 @@
   </footer>
 </body>
 </html>
-Update index.html with embedded Google Form
