--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <p>Website in development.<br>Join the waitlist below.</p>
 
   <a
-    href="https://docs.google.com/forms/d/e/1FAIpQLSd1tX1sIuhhjtFuBueVobE9TBGOWE45plhHyjXRVEI-ijhvmA/viewform"
+<iframe src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     target="_blank"
     rel="noopener noreferrer"
     class="waitlist-button"
