--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #0e0e0e;
-      color: #ffffff;
+      background: #ffffff;
+      color: #000000;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -20,23 +20,29 @@
       padding: 2rem;
     }
 
+    img.logo {
+      width: 120px;
+      margin-bottom: 1rem;
+    }
+
     h1 {
-      font-size: 2.8rem;
+      font-size: 2.4rem;
       margin-bottom: 0.3em;
     }
 
     h2 {
       font-weight: normal;
-      font-size: 1.4rem;
-      color: #aaa;
-      margin-bottom: 2rem;
+      font-size: 1.2rem;
+      color: #333;
+      margin-bottom: 1.5rem;
     }
 
     iframe {
       width: 100%;
-      max-width: 600px;
+      max-width: 400px;
+      height: 180px;
       border: none;
-      margin-top: 1em;
+      margin-top: 1rem;
     }
 
     footer {
@@ -46,7 +52,7 @@
     }
 
     a {
-      color: #42a5f5;
+      color: #007BFF;
       text-decoration: none;
     }
 
@@ -56,32 +62,27 @@
   </style>
 </head>
 <body>
-  <h1>🛡️ Archi</h1>
+  <img src="archi-logo.png" alt="Archi Logo" class="logo" />
+  <h1>Archi</h1>
   <h2>Touch nothing. Archi sees.</h2>
   <p>Website in development.<br>Join the waitlist below.</p>
 
-  <!-- Tally Form -->
-  <iframe 
-    data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" 
-    loading="lazy" 
-    width="100%" 
-    height="274" 
-    frameborder="0" 
-    marginheight="0" 
-    marginwidth="0" 
-    title="Join the Archi Waitlist"
-  ></iframe>
-
+  <!-- Tally form -->
+  <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="274" frameborder="0" marginheight="0" marginwidth="0" title="Join the Archi Waitlist"></iframe>
   <script>
-    var d = document, 
-        w = "https://tally.so/widgets/embed.js", 
+    var d = document,
+        w = "https://tally.so/widgets/embed.js",
         v = function() {
-          if (typeof Tally !== "undefined") Tally.loadEmbeds();
-          else d.querySelectorAll("iframe[data-tally-src]:not([src])")
-                .forEach(function(e) { e.src = e.dataset.tallySrc });
+          if (typeof Tally !== "undefined") {
+            Tally.loadEmbeds();
+          } else {
+            d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function(e) {
+              e.src = e.dataset.tallySrc;
+            });
+          }
         };
     if (typeof Tally !== "undefined") v();
-    else if (d.querySelector('script[src="'+w+'"]') == null) {
+    else if (d.querySelector('script[src="' + w + '"]') == null) {
       var s = d.createElement("script");
       s.src = w;
       s.onload = v;
@@ -92,10 +93,7 @@
 
   <footer>
     <p>&copy; 2025 Archi AI. All rights reserved.</p>
-    <p>
-      <a href="/privacy.html">Privacy Policy</a> •
-      <a href="/terms.html">Terms of Service</a>
-    </p>
+    <p><a href="/privacy.html">Privacy Policy</a> • <a href="/terms.html">Terms of Service</a></p>
   </footer>
 </body>
 </html>
