--- a/index.html
+++ b/index.html
@@ -4,96 +4,110 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi — Silent AI Guardian</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 0;
       background: #ffffff;
-      color: #000000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      color: #111;
       text-align: center;
-      padding: 2rem;
     }
 
-    img.logo {
-      width: 120px;
-      margin-bottom: 1rem;
+    .container {
+      padding: 6vh 4vw;
+      max-width: 720px;
+      margin: auto;
+    }
+
+    .logo {
+      width: 96px;
+      height: auto;
+      margin-bottom: 1.5rem;
     }
 
     h1 {
-      font-size: 2.4rem;
-      margin-bottom: 0.3em;
+      font-size: 2.6rem;
+      margin-bottom: 0.4em;
     }
 
     h2 {
+      font-size: 1.4rem;
+      color: #666;
       font-weight: normal;
-      font-size: 1.2rem;
-      color: #333;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2.5rem;
     }
 
     iframe {
       width: 100%;
-      max-width: 400px;
-      height: 180px;
+      max-width: 600px;
+      height: 600px;
       border: none;
-      margin-top: 1rem;
+      border-radius: 10px;
+      background: #fff;
+      margin-bottom: 3rem;
     }
 
     footer {
-      margin-top: 3em;
       font-size: 0.85rem;
-      color: #666;
+      color: #999;
+      margin-top: 3rem;
     }
 
-    a {
-      color: #007BFF;
+    footer a {
+      color: #4c80f1;
       text-decoration: none;
     }
 
-    a:hover {
+    footer a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <img src="archi-logo.png" alt="Archi Logo" class="logo" />
-  <h1>Archi</h1>
-  <h2>Touch nothing. Archi sees.</h2>
-  <p>Website in development.<br>Join the waitlist below.</p>
+  <div class="container">
+    <!-- 🔒 Archi Logo -->
+    <img src="logo.png" alt="Archi logo" class="logo" />
 
-  <!-- Tally form -->
-  <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="274" frameborder="0" marginheight="0" marginwidth="0" title="Join the Archi Waitlist"></iframe>
+    <!-- 🧠 Tagline -->
+    <h1>🛡️ Archi</h1>
+    <h2>Touch nothing. Archi sees.</h2>
+
+    <!-- 📝 Waitlist Form (replace src link as needed) -->
+    <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy"></iframe>
+
+    <!-- 📄 Footer -->
+    <footer>
+      <p>&copy; 2025 Archi AI. All rights reserved.</p>
+      <p>
+        <a href="/privacy.html">Privacy Policy</a> •
+        <a href="/terms.html">Terms of Service</a>
+      </p>
+    </footer>
+  </div>
+
+  <!-- ✅ Tally Embed Script -->
   <script>
     var d = document,
         w = "https://tally.so/widgets/embed.js",
-        v = function() {
+        v = function () {
           if (typeof Tally !== "undefined") {
             Tally.loadEmbeds();
           } else {
-            d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function(e) {
+            d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function (e) {
               e.src = e.dataset.tallySrc;
             });
           }
         };
-    if (typeof Tally !== "undefined") v();
-    else if (d.querySelector('script[src="' + w + '"]') == null) {
+    if (typeof Tally === "undefined") {
       var s = d.createElement("script");
       s.src = w;
       s.onload = v;
       s.onerror = v;
       d.body.appendChild(s);
-    }
+    } else v();
   </script>
-
-  <footer>
-    <p>&copy; 2025 Archi AI. All rights reserved.</p>
-    <p><a href="/privacy.html">Privacy Policy</a> • <a href="/terms.html">Terms of Service</a></p>
-  </footer>
 </body>
 </html>
