--- a/index.html
+++ b/index.html
@@ -4,40 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi — Silent AI Guardian</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: #ffffff;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      color: #111;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0e0e0e;
+      color: white;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      animation: fadeIn 1.5s ease-in;
     }
 
-    .container {
-      padding: 6vh 4vw;
-      max-width: 720px;
-      margin: auto;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
-    .logo {
-      width: 96px;
-      height: auto;
-      margin-bottom: 1.5rem;
+    .title {
+      font-size: 2.5rem;
+      display: flex;
+      align-items: center;
+      gap: 0.6rem;
+      margin-bottom: 0.3em;
     }
 
-    h1 {
-      font-size: 2.6rem;
-      margin-bottom: 0.4em;
+    .title img {
+      height: 1.8em;
+      width: auto;
     }
 
     h2 {
-      font-size: 1.4rem;
-      color: #666;
       font-weight: normal;
-      margin-bottom: 2.5rem;
+      font-size: 1.3rem;
+      color: #aaa;
+      margin-bottom: 2rem;
     }
 
     iframe {
@@ -45,69 +50,62 @@
       max-width: 600px;
       height: 600px;
       border: none;
-      border-radius: 10px;
       background: #fff;
-      margin-bottom: 3rem;
+      border-radius: 12px;
     }
 
     footer {
+      margin-top: 3em;
       font-size: 0.85rem;
-      color: #999;
-      margin-top: 3rem;
+      color: #666;
     }
 
-    footer a {
-      color: #4c80f1;
+    a {
+      color: #42a5f5;
       text-decoration: none;
     }
 
-    footer a:hover {
+    a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- 🔒 Archi Logo -->
-    <img src="logo.png" alt="Archi logo" class="logo" />
 
-    <!-- 🧠 Tagline -->
-    <h1>🛡️ Archi</h1>
-    <h2>Touch nothing. Archi sees.</h2>
-
-    <!-- 📝 Waitlist Form (replace src link as needed) -->
-    <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy"></iframe>
-
-    <!-- 📄 Footer -->
-    <footer>
-      <p>&copy; 2025 Archi AI. All rights reserved.</p>
-      <p>
-        <a href="/privacy.html">Privacy Policy</a> •
-        <a href="/terms.html">Terms of Service</a>
-      </p>
-    </footer>
+  <div class="title">
+    <span>Archi</span>
+    <img src="archi-logo.png" alt="Archi Logo" />
   </div>
 
-  <!-- ✅ Tally Embed Script -->
+  <h2>Touch nothing. Archi sees.</h2>
+
+  <p>Website in development.<br>Join the waitlist below.</p>
+
+  <!-- Your Tally form embed -->
+  <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
+          loading="lazy" width="100%" height="274" frameborder="0" marginheight="0" marginwidth="0"
+          title="Join the Archi Waitlist"></iframe>
   <script>
-    var d = document,
-        w = "https://tally.so/widgets/embed.js",
-        v = function () {
-          if (typeof Tally !== "undefined") {
-            Tally.loadEmbeds();
-          } else {
-            d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function (e) {
-              e.src = e.dataset.tallySrc;
-            });
-          }
-        };
-    if (typeof Tally === "undefined") {
+    var d = document, w = "https://tally.so/widgets/embed.js", v = function () {
+      "undefined" != typeof Tally ? Tally.loadEmbeds() :
+        d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function (e) {
+          e.src = e.dataset.tallySrc
+        });
+    };
+    if ("undefined" != typeof Tally) v();
+    else if (d.querySelector('script[src="' + w + '"]') == null) {
       var s = d.createElement("script");
       s.src = w;
       s.onload = v;
       s.onerror = v;
       d.body.appendChild(s);
-    } else v();
+    }
   </script>
+
+  <footer>
+    <p>&copy; 2025 Archi AI. All rights reserved.</p>
+    <p><a href="/privacy.html">Privacy Policy</a> • <a href="/terms.html">Terms of Service</a></p>
+  </footer>
+
 </body>
 </html>
