--- a/index.html
+++ b/index.html
@@ -112,3 +112,5 @@
 
 </body>
 </html>
+<p>Testing Logo Below 👇</p>
+<img src="archi-logo.png" alt="Test Archi Logo" style="max-width: 200px; background: white; padding: 10px;" />
