--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi — Silent AI Guardian</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/archi-logo.png" type="image/png" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0e0e0e;
+      background: #0e0e0e;
       color: white;
       text-align: center;
       display: flex;
@@ -17,49 +17,55 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      animation: fadeIn 1.5s ease-in;
+      padding: 2rem;
+      animation: fadeIn 1.5s ease;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
+      from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
     .title {
       display: flex;
       align-items: center;
-      gap: 0.6rem;
-      font-size: 2.5rem;
-      font-weight: bold;
+      justify-content: center;
+      font-size: 2.8rem;
       margin-bottom: 0.3em;
+      gap: 0.5rem;
     }
 
-    .title img {
-      height: 2.2rem;
+    .logo {
+      height: 42px;
       width: auto;
-      vertical-align: middle;
     }
 
     h2 {
       font-weight: normal;
       font-size: 1.3rem;
-      color: #aaa;
+      color: #ccc;
+      margin-bottom: 1.5rem;
+    }
+
+    .form-container {
+      width: 100%;
+      max-width: 480px;
+      background: #1a1a1a;
+      border-radius: 12px;
+      padding: 1.5rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
       margin-bottom: 2rem;
     }
 
     iframe {
       width: 100%;
-      max-width: 600px;
-      height: 600px;
       border: none;
-      background: #fff;
-      border-radius: 12px;
     }
 
     footer {
-      margin-top: 3em;
       font-size: 0.85rem;
       color: #666;
+      margin-top: auto;
     }
 
     a {
@@ -73,43 +79,37 @@
   </style>
 </head>
 <body>
-
   <div class="title">
     <span>Archi</span>
-    <img src="archi-logo.png" alt="Archi logo" />
+    <img src="archi-logo.png" alt="Archi logo" class="logo" />
   </div>
-
   <h2>Touch nothing. Archi sees.</h2>
-
   <p>Website in development.<br>Join the waitlist below.</p>
 
-  <!-- Tally Embed -->
-  <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
-          loading="lazy" width="100%" height="274" frameborder="0" marginheight="0" marginwidth="0"
-          title="Join the Archi Waitlist"></iframe>
-
-  <script>
-    var d = document, w = "https://tally.so/widgets/embed.js", v = function () {
-      "undefined" != typeof Tally ? Tally.loadEmbeds() :
-        d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function (e) {
-          e.src = e.dataset.tallySrc
-        });
-    };
-    if ("undefined" != typeof Tally) v();
-    else if (d.querySelector('script[src="' + w + '"]') == null) {
-      var s = d.createElement("script");
-      s.src = w;
-      s.onload = v;
-      s.onerror = v;
-      d.body.appendChild(s);
-    }
-  </script>
+  <div class="form-container">
+    <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" height="150" title="Join the Archi Waitlist"></iframe>
+  </div>
 
   <footer>
     <p>&copy; 2025 Archi AI. All rights reserved.</p>
-    <p><a href="/privacy.html">Privacy Policy</a> • <a href="/terms.html">Terms of Service</a></p>
+    <p>
+      <a href="/privacy.html">Privacy Policy</a> •
+      <a href="/terms.html">Terms of Service</a>
+    </p>
   </footer>
 
+  <script>
+    var d=document,w="https://tally.so/widgets/embed.js",v=function(){
+      if(typeof Tally!=="undefined")Tally.loadEmbeds();
+      else d.querySelectorAll("iframe[data-tally-src]:not([src])")
+        .forEach(e=>{e.src=e.dataset.tallySrc});
+    };
+    if(typeof Tally!=="undefined") v();
+    else if(!d.querySelector('script[src="'+w+'"]')) {
+      var s=d.createElement("script"); s.src=w; s.onload=v; s.onerror=v;
+      d.body.appendChild(s);
+    }
+  </script>
 </body>
 </html>
 <p>Testing Logo Below 👇</p>
