--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi — Silent AI Guardian</title>
-  <link rel="icon" href="/archi-logo.png" type="image/png" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #0e0e0e;
+      background-color: #0e0e0e;
       color: white;
       text-align: center;
       display: flex;
@@ -17,8 +17,8 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      padding: 2rem;
       animation: fadeIn 1.5s ease;
+      padding: 1rem;
     }
 
     @keyframes fadeIn {
@@ -27,45 +27,48 @@
     }
 
     .title {
+      font-size: 2.5rem;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 2.8rem;
-      margin-bottom: 0.3em;
       gap: 0.5rem;
     }
 
-    .logo {
-      height: 42px;
-      width: auto;
+    .logo-mask {
+      display: inline-block;
+      width: 1.5em;
+      height: 1.5em;
+      background: white;
+      -webkit-mask: url('archi-logo.png') no-repeat center;
+      -webkit-mask-size: contain;
+      mask: url('archi-logo.png') no-repeat center;
+      mask-size: contain;
     }
 
     h2 {
       font-weight: normal;
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       color: #ccc;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
     }
 
-    .form-container {
-      width: 100%;
-      max-width: 480px;
-      background: #1a1a1a;
-      border-radius: 12px;
-      padding: 1.5rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      margin-bottom: 2rem;
+    p {
+      margin: 1rem 0;
+      color: #aaa;
     }
 
     iframe {
       width: 100%;
+      max-width: 500px;
+      height: 280px;
       border: none;
+      background: transparent;
     }
 
     footer {
+      margin-top: 3rem;
       font-size: 0.85rem;
       color: #666;
-      margin-top: auto;
     }
 
     a {
@@ -79,16 +82,43 @@
   </style>
 </head>
 <body>
-  <div class="title">
-    <span>Archi</span>
-    <img src="archi-logo.png" alt="Archi logo" class="logo" />
-  </div>
+  <h1 class="title">
+    Archi <span class="logo-mask"></span>
+  </h1>
+
   <h2>Touch nothing. Archi sees.</h2>
+
   <p>Website in development.<br>Join the waitlist below.</p>
 
-  <div class="form-container">
-    <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" height="150" title="Join the Archi Waitlist"></iframe>
-  </div>
+  <iframe
+    data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
+    loading="lazy"
+    width="100%"
+    height="274"
+    frameborder="0"
+    marginheight="0"
+    marginwidth="0"
+    title="Join the Archi Waitlist"
+  ></iframe>
+
+  <script>
+    var d = document,
+        w = "https://tally.so/widgets/embed.js",
+        v = function () {
+          if (typeof Tally !== "undefined") Tally.loadEmbeds();
+          else d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function (e) {
+            e.src = e.dataset.tallySrc;
+          });
+        };
+    if (typeof Tally !== "undefined") v();
+    else if (d.querySelector('script[src="' + w + '"]') == null) {
+      var s = d.createElement("script");
+      s.src = w;
+      s.onload = v;
+      s.onerror = v;
+      d.body.appendChild(s);
+    }
+  </script>
 
   <footer>
     <p>&copy; 2025 Archi AI. All rights reserved.</p>
@@ -97,18 +127,5 @@
       <a href="/terms.html">Terms of Service</a>
     </p>
   </footer>
-
-  <script>
-    var d=document,w="https://tally.so/widgets/embed.js",v=function(){
-      if(typeof Tally!=="undefined")Tally.loadEmbeds();
-      else d.querySelectorAll("iframe[data-tally-src]:not([src])")
-        .forEach(e=>{e.src=e.dataset.tallySrc});
-    };
-    if(typeof Tally!=="undefined") v();
-    else if(!d.querySelector('script[src="'+w+'"]')) {
-      var s=d.createElement("script"); s.src=w; s.onload=v; s.onerror=v;
-      d.body.appendChild(s);
-    }
-  </script>
 </body>
 </html>
