--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi — Silent AI Guardian</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="archi-logo-white.png" type="image/png" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #0e0e0e;
       color: white;
-      text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      animation: fadeIn 1.5s ease;
-      padding: 1rem;
+      text-align: center;
+      animation: fadeIn 1.5s ease-in;
     }
 
     @keyframes fadeIn {
@@ -27,48 +26,40 @@
     }
 
     .title {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
+      font-weight: bold;
       display: flex;
       align-items: center;
-      justify-content: center;
       gap: 0.5rem;
+      margin-bottom: 0.5rem;
     }
 
-    .logo-mask {
-      display: inline-block;
-      width: 1.5em;
-      height: 1.5em;
-      background: white;
-      -webkit-mask: url('archi-logo.png') no-repeat center;
-      -webkit-mask-size: contain;
-      mask: url('archi-logo.png') no-repeat center;
-      mask-size: contain;
+    .title img {
+      height: 2.2rem;
+      vertical-align: middle;
     }
 
     h2 {
       font-weight: normal;
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       color: #ccc;
       margin-bottom: 2rem;
     }
 
-    p {
-      margin: 1rem 0;
-      color: #aaa;
-    }
-
     iframe {
-      width: 100%;
-      max-width: 500px;
-      height: 280px;
       border: none;
-      background: transparent;
+      width: 100%;
+      max-width: 480px;
+      height: 280px;
+      margin: 1rem auto;
+      border-radius: 10px;
+      overflow: hidden;
     }
 
     footer {
-      margin-top: 3rem;
+      margin-top: 3em;
       font-size: 0.85rem;
-      color: #666;
+      color: #777;
     }
 
     a {
@@ -82,40 +73,29 @@
   </style>
 </head>
 <body>
-  <h1 class="title">
-    Archi <span class="logo-mask"></span>
-  </h1>
 
+  <div class="title">
+    Archi <img src="archi-logo-white.png" alt="Archi logo" />
+  </div>
   <h2>Touch nothing. Archi sees.</h2>
 
   <p>Website in development.<br>Join the waitlist below.</p>
 
-  <iframe
-    data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
-    loading="lazy"
-    width="100%"
-    height="274"
-    frameborder="0"
-    marginheight="0"
-    marginwidth="0"
-    title="Join the Archi Waitlist"
-  ></iframe>
-
+  <!-- Tally form embed -->
+  <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" title="Join the Archi Waitlist"></iframe>
   <script>
-    var d = document,
-        w = "https://tally.so/widgets/embed.js",
-        v = function () {
-          if (typeof Tally !== "undefined") Tally.loadEmbeds();
-          else d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function (e) {
-            e.src = e.dataset.tallySrc;
-          });
-        };
-    if (typeof Tally !== "undefined") v();
-    else if (d.querySelector('script[src="' + w + '"]') == null) {
-      var s = d.createElement("script");
-      s.src = w;
-      s.onload = v;
-      s.onerror = v;
+    var d=document,w="https://tally.so/widgets/embed.js",v=function(){
+      if("undefined"!=typeof Tally)Tally.loadEmbeds();
+      else d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach(function(e){
+        e.src=e.dataset.tallySrc
+      });
+    };
+    if("undefined"!=typeof Tally) v();
+    else if(d.querySelector('script[src="'+w+'"]')==null){
+      var s=d.createElement("script");
+      s.src=w;
+      s.onload=v;
+      s.onerror=v;
       d.body.appendChild(s);
     }
   </script>
