--- a/index.html
+++ b/index.html
@@ -3,115 +3,101 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Archi — Silent AI Guardian</title>
-  <link rel="icon" href="archi-logo.png" type="image/png" />
+  <title>Archi – Silent AI Guardian</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #0e0e0e;
-      color: #ffffff;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #ffffff;
+      color: #000000;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
       min-height: 100vh;
       text-align: center;
-      padding: 4vh 2vw;
+      padding: 20px;
     }
 
-    header {
+    .logo-title {
       display: flex;
       align-items: center;
-      gap: 0.6rem;
+      gap: 10px;
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
+
+    .logo-title img {
+      height: 40px;
+      vertical-align: middle;
+    }
+
+    p {
+      margin-top: 1rem;
+      font-size: 1.2rem;
+    }
+
+    form {
+      margin-top: 2rem;
+    }
+
+    input[type="email"] {
+      padding: 12px;
+      font-size: 1rem;
+      width: 300px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
       margin-bottom: 1rem;
     }
 
-    header img {
-      height: 40px;
-      width: 40px;
-    }
-
-    header h1 {
-      font-size: 2.4rem;
-      margin: 0;
-    }
-
-    h2 {
-      font-weight: normal;
-      font-size: 1.2rem;
-      color: #aaa;
-      margin-bottom: 2rem;
-    }
-
-    iframe {
-      width: 100%;
-      max-width: 600px;
-      height: 500px;
+    button {
+      background-color: #007bff;
+      color: white;
       border: none;
-      background: #fff;
-      border-radius: 12px;
+      padding: 12px 20px;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
     }
 
-    footer {
-      margin-top: 3em;
-      font-size: 0.85rem;
+    .footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
       color: #666;
     }
 
-    a {
-      color: #42a5f5;
+    .footer a {
+      color: #007bff;
       text-decoration: none;
+      margin: 0 5px;
     }
 
-    a:hover {
+    .footer a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <img src="archi-logo.png" alt="Archi logo" />
-    <h1>Archi 👁️</h1>
-  </header>
+  <div class="logo-title">
+    <span>Archi</span>
+    <img src="archi-logo.png" alt="Archi Logo" />
+  </div>
 
-  <h2>Touch nothing. Archi sees.</h2>
+  <p>Touch nothing. Archi sees.</p>
+  <p><strong>Website in development.</strong><br>Join the waitlist below.</p>
 
-  <!-- 👇 Waitlist Embed -->
-  <iframe 
-    data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
-    loading="lazy"
-    width="100%"
-    height="500"
-    frameborder="0"
-    marginheight="0"
-    marginwidth="0"
-    title="Join the Archi Waitlist"
-  ></iframe>
-  <script>
-    var d=document,w="https://tally.so/widgets/embed.js",v=function(){
-      "undefined"!=typeof Tally?Tally.loadEmbeds():
-      d.querySelectorAll("iframe[data-tally-src]:not([src])")
-      .forEach((function(e){e.src=e.dataset.tallySrc}))
-    };
-    if("undefined"!=typeof Tally) v();
-    else if(d.querySelector('script[src="'+w+'"]')==null){
-      var s=d.createElement("script");
-      s.src=w;
-      s.onload=v;
-      s.onerror=v;
-      d.body.appendChild(s);
-    }
-  </script>
+  <form action="https://tally.so/r/your-form-id" method="POST">
+    <input type="email" name="email" placeholder="Email" required />
+    <br />
+    <button type="submit">Join the Waitlist →</button>
+  </form>
 
-  <footer>
-    <p>&copy; 2025 Archi AI. All rights reserved.</p>
-    <p>
-      <a href="/privacy.html">Privacy Policy</a> •
-      <a href="/terms.html">Terms of Service</a>
-    </p>
-  </footer>
+  <div class="footer">
+    © 2025 Archi AI. All rights reserved.
+    <br />
+    <a href="#">Privacy Policy</a> · <a href="#">Terms of Service</a>
+  </div>
 
 </body>
 </html>
