--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
     }
   </style>
 </head>
+  <style>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
+
 <body>
 
   <div class="logo-title">
@@ -88,6 +94,30 @@
   <p><strong>Website in development.</strong><br>Join the waitlist below.</p>
 
   <form action="https://tally.so/r/your-form-id" method="POST">
+    <!-- Privacy Policy + Terms of Service -->
+<section style="margin-top: 60px; text-align: center; color: #999; font-size: 0.9rem;">
+  <p>© 2025 Archi AI. All rights reserved.</p>
+  <p>
+    <a href="#privacy" style="color: #0af;">Privacy Policy</a> · 
+    <a href="#terms" style="color: #0af;">Terms of Service</a>
+  </p>
+</section>
+
+<!-- Hidden content: privacy + terms -->
+<section id="privacy" style="margin-top: 100px; color: white; max-width: 700px; margin-inline: auto;">
+  <h2>Privacy Policy</h2>
+  <p>Effective date: July 24, 2025</p>
+  <p><strong>Archi AI</strong> is committed to protecting your privacy...</p>
+  <!-- Truncated for brevity — use full block I gave earlier -->
+</section>
+
+<section id="terms" style="margin-top: 100px; color: white; max-width: 700px; margin-inline: auto;">
+  <h2>Terms of Service</h2>
+  <p>Effective date: July 24, 2025</p>
+  <p>Welcome to <strong>Archi AI</strong>. By using this website...</p>
+  <!-- Truncated for brevity — use full block I gave earlier -->
+</section>
+
     <input type="email" name="email" placeholder="Email" required />
     <br />
     <button type="submit">Join the Waitlist →</button>
