--- a/index.html
+++ b/index.html
@@ -4,62 +4,104 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi – Silent AI Guardian</title>
-  <link rel="icon" href="archi-logo.png" type="image/png">
+  <link rel="stylesheet" href="style.css" />
   <style>
+    :root {
+      --bg: #fff;
+      --text: #000;
+      --accent: #000;
+      --button-bg: #000;
+      --button-text: #fff;
+      --link: #007aff;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #000;
+        --text: #fff;
+        --accent: #fff;
+        --button-bg: #fff;
+        --button-text: #000;
+        --link: #66b2ff;
+      }
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      background-color: #ffffff;
-      color: #000000;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      padding: 20px;
       text-align: center;
+      padding: 20px;
     }
 
     .logo-title {
       display: flex;
       align-items: center;
       gap: 12px;
-      font-size: 2.4rem;
-      font-weight: 600;
+      font-size: 2.5rem;
+      font-weight: bold;
       margin-bottom: 1rem;
     }
 
     .logo-title img {
-      height: 42px;
-      width: auto;
+      height: 40px;
+    }
+
+    .tagline {
+      font-size: 1.25rem;
+      margin-bottom: 1.5rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+
+    input[type="email"] {
+      padding: 12px 16px;
+      font-size: 1rem;
+      border: 1px solid #ccc;
       border-radius: 6px;
-    }
-
-    p {
-      margin-top: 1rem;
-      font-size: 1.1rem;
-      max-width: 500px;
-    }
-
-    .waitlist-frame {
-      margin-top: 2rem;
       width: 100%;
-      max-width: 600px;
-      height: 500px;
+      max-width: 320px;
+    }
+
+    button {
+      background-color: var(--button-bg);
+      color: var(--button-text);
+      padding: 12px 24px;
       border: none;
-      border-radius: 10px;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    button:hover {
+      opacity: 0.9;
     }
 
     footer {
-      margin-top: 3rem;
       font-size: 0.9rem;
-      color: #555;
+      color: var(--text);
     }
 
     footer a {
-      color: #1e88e5;
+      color: var(--link);
       text-decoration: none;
-      margin: 0 6px;
+      margin: 0 8px;
     }
 
     footer a:hover {
@@ -68,28 +110,26 @@
   </style>
 </head>
 <body>
-
   <div class="logo-title">
     <span>Archi</span>
-    <img src="archi-logo.png" alt="Archi Logo" />
+    <img src="logo.svg" alt="Archi Eye Logo" />
   </div>
 
-  <p>Touch nothing. Archi sees.<br>Join the waitlist below for early access.</p>
+  <div class="tagline">
+    <p>Touch nothing. Archi sees.</p>
+    <p>Join the waitlist below for early access.</p>
+  </div>
 
-  <iframe 
-    class="waitlist-frame"
-    src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" 
-    loading="lazy" 
-    title="Join the Archi Waitlist"
-  ></iframe>
+  <form action="https://formspree.io/f/your-form-id" method="POST">
+    <input type="email" name="email" placeholder="Email" required />
+    <button type="submit">Join the Waitlist →</button>
+  </form>
 
   <footer>
-    <p>&copy; 2025 Archi AI. All rights reserved.</p>
-    <p>
-      <a href="/privacy.html">Privacy Policy</a> •
-      <a href="/terms.html">Terms of Service</a>
-    </p>
+    © 2025 Archi AI. All rights reserved.
+    <br />
+    <a href="/privacy.html">Privacy Policy</a> ·
+    <a href="/terms.html">Terms of Service</a>
   </footer>
-
 </body>
 </html>
