--- a/index.html
+++ b/index.html
@@ -4,28 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi – Silent AI Guardian</title>
-  <link rel="stylesheet" href="style.css" />
+
   <style>
     :root {
-      --bg: #fff;
-      --text: #000;
-      --accent: #000;
-      --button-bg: #000;
-      --button-text: #fff;
+      --bg: #ffffff;
+      --text: #000000;
+      --accent: #000000;
+      --button-bg: #000000;
+      --button-text: #ffffff;
       --link: #007aff;
     }
 
     @media (prefers-color-scheme: dark) {
-      .logo-img {
-        filter: brightness(2); /* lightens dark logos */
-      }
-    }
       :root {
-        --bg: #000;
-        --text: #fff;
-        --accent: #fff;
-        --button-bg: #fff;
-        --button-text: #000;
+        --bg: #000000;
+        --text: #ffffff;
+        --accent: #ffffff;
+        --button-bg: #ffffff;
+        --button-text: #000000;
         --link: #66b2ff;
       }
     }
@@ -59,6 +55,7 @@
 
     .logo-title img {
       height: 40px;
+      filter: brightness(1.3);
     }
 
     .tagline {
@@ -116,7 +113,7 @@
 <body>
   <div class="logo-title">
     <span>Archi</span>
-    <img src="logo.png" alt="Archi Logo" height="40" onerror="this.style.displays='none' " />
+    <img src="logo.png" alt="Archi Logo" class="logo-img" onerror="this.style.display='none'" />
   </div>
 
   <div class="tagline">
@@ -137,3 +134,4 @@
   </footer>
 </body>
 </html>
+
