--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <p>Join the waitlist below for early access.</p>
   </div>
 
-  <form action="https://formspree.io/f/your-form-id" method="POST">
+  <form action="https://formspree.io/f/xyz12345" method="POST">
     <input type="email" name="email" placeholder="Email" required />
     <button type="submit">Join the Waitlist →</button>
   </form>
