--- a/index.html
+++ b/index.html
@@ -4,30 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi – Silent AI Guardian</title>
-
   <style>
     :root {
-      --bg: #ffffff;
-      --text: #000000;
-      --accent: #000000;
-      --button-bg: #000000;
-      --button-text: #ffffff;
+      --bg: #fff;
+      --text: #000;
+      --accent: #000;
+      --button-bg: #000;
+      --button-text: #fff;
       --link: #007aff;
     }
 
     @media (prefers-color-scheme: dark) {
       :root {
-        --bg: #000000;
-        --text: #ffffff;
-        --accent: #ffffff;
-        --button-bg: #ffffff;
-        --button-text: #000000;
+        --bg: #000;
+        --text: #fff;
+        --accent: #fff;
+        --button-bg: #fff;
+        --button-text: #000;
         --link: #66b2ff;
       }
-    }
-
-    * {
-      box-sizing: border-box;
     }
 
     body {
@@ -41,7 +36,7 @@
       justify-content: center;
       min-height: 100vh;
       text-align: center;
-      padding: 20px;
+      padding: 24px;
     }
 
     .logo-title {
@@ -54,8 +49,9 @@
     }
 
     .logo-title img {
-      height: 40px;
-      filter: brightness(1.3);
+      height: 36px;
+      width: auto;
+      vertical-align: middle;
     }
 
     .tagline {
@@ -69,6 +65,7 @@
       align-items: center;
       gap: 1rem;
       margin-bottom: 2rem;
+      width: 100%;
     }
 
     input[type="email"] {
@@ -88,6 +85,14 @@
       border-radius: 6px;
       font-size: 1rem;
       cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    button img {
+      height: 18px;
+      width: 18px;
     }
 
     button:hover {
@@ -113,7 +118,7 @@
 <body>
   <div class="logo-title">
     <span>Archi</span>
-    <img src="logo.png" alt="Archi Logo" class="logo-img" onerror="this.style.display='none'" />
+    <img src="archi-icon.svg" alt="Archi Logo" />
   </div>
 
   <div class="tagline">
@@ -121,17 +126,18 @@
     <p>Join the waitlist below for early access.</p>
   </div>
 
-  <form action="https://formspree.io/f/xyz12345" method="POST">
+  <form action="https://tally.so/r/your-form-id" method="POST">
     <input type="email" name="email" placeholder="Email" required />
-    <button type="submit">Join the Waitlist →</button>
+    <button type="submit">
+      Submit
+      <img src="https://tally.so/images/favicon/favicon-32x32.png" alt="Tally Logo" />
+    </button>
   </form>
 
   <footer>
-    © 2025 Archi AI. All rights reserved.
-    <br />
+    © 2025 Archi AI. All rights reserved.<br />
     <a href="/privacy.html">Privacy Policy</a> ·
     <a href="/terms.html">Terms of Service</a>
   </footer>
 </body>
 </html>
-
