--- a/index.html
+++ b/index.html
@@ -126,13 +126,28 @@
     <p>Join the waitlist below for early access.</p>
   </div>
 
-  <form action="https://tally.so/r/your-form-id" method="POST">
-    <input type="email" name="email" placeholder="Email" required />
-    <button type="submit">
-      Submit
-      <img src="https://tally.so/images/favicon/favicon-32x32.png" alt="Tally Logo" />
-    </button>
-  </form>
+  <!-- Embed Tally Form -->
+<div style="width: 100%; max-width: 480px; margin: 0 auto;">
+  <iframe 
+    data-tally-src="https://tally.so/r/wg6bAl?transparentBackground=1&hideTitle=1" 
+    loading="lazy" 
+    width="100%" 
+    height="180" 
+    frameborder="0" 
+    marginheight="0" 
+    marginwidth="0" 
+    title="Archi Waitlist"
+    style="min-height: 220px; border: none; overflow: hidden;">
+  </iframe>
+</div>
+
+<script>
+  var d = document, s = d.createElement("script");
+  s.src = "https://tally.so/widgets/embed.js";
+  s.onload = function () { Tally.loadEmbeds(); };
+  d.body.appendChild(s);
+</script>
+
 
   <footer>
     © 2025 Archi AI. All rights reserved.<br />
